refactor: Modify createConnection() method to handle URISyntaxException
The createConnection() method in the GitLabGroupsApi class has been modified to handle URISyntaxException. This change simplifies the error handling.